--- a/to_new/package.json
+++ b/to_new/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+	"express": "^4.0.0",
     "keystone": "^0.3.11",
     "async": "^0.9.0",
     "underscore": "^1.8.0",
