--- a/to_new/package.json
+++ b/to_new/package.json
@@ -11,7 +11,8 @@
     "cloudinary": "^1.0.12",
     "express-handlebars": "^1.1.0",
     "handlebars": "^2.0.0",
-    "dotenv": "^1.1.0"
+    "dotenv": "^1.1.0",
+    "ldapjs": "latest"
   },
   "devDependencies": {
     "grunt": "^0.4.4",
