--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-	"express": "^4.0.0",
+    "express": "^4.0.0",
     "keystone": "^0.3.11",
     "async": "^0.9.0",
     "underscore": "^1.8.0",
@@ -12,7 +12,8 @@
     "express-handlebars": "^1.1.0",
     "handlebars": "^2.0.0",
     "dotenv": "^1.1.0",
-    "express-session": "latest"
+    "express-session": "latest",
+    "ldapjs": "latest"
   },
   "devDependencies": {
     "grunt": "^0.4.4",
