--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "handlebars": "^2.0.0",
     "dotenv": "^1.1.0",
     "express-session": "latest",
-    "ldapjs": "latest"
+    "ldapjs": "latest",
+    "mongoose": "latest"
   },
   "devDependencies": {
     "grunt": "^0.4.4",
