--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^1.1.0",
     "express-session": "latest",
     "ldapjs": "latest",
-    "mongoose": "latest",
+    "mongoose": "latest"
   },
   "devDependencies": {
     "grunt": "^0.4.4",
