waza \!\! le site est beau \! (oupas)

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "assert": "latest",
     "password-hash": "latest",
     "mongodb": "latest",
+    "date-format-lite": "latest",
     "node-schedule": "latest"
   },
   "devDependencies": {
